<resources>
    <string name="app_name" translatable="false">DS Traffic Counter</string>
    <string name="action_settings">Settings</string>
    <string name="action_stop">Stop service</string>
    <string name="action_start">Start service</string>
    <string name="action_disable">Disable mobile data</string>
    <string name="action_enable">Enable mobile data</string>
    <string name="action_set_usage">Set traffic usage</string>
    <string name="choose_sim">Choose SIM</string>
    <string name="data_dis">Mobile data disabled</string>
    <string name="other_network">Mobile data disabled. Other network is active (Wi-Fi, Bluetooth etc.)</string>
    <string name="sim1_act">SIM1 is active: %1$s/s || %2$s/s</string>
    <string name="sim2_act">SIM2 is active: %1$s/s || %2$s/s</string>
    <string name="service_running">Service is already running!</string>
    <string name="kb">" KB"</string>
    <string name="mb">" MB"</string>
    <string name="gb">" GB"</string>
    <string name="received">Received</string>
    <string name="transmitted">Transmitted</string>
    <string name="total">Total</string>
    <string name="reset">Reset</string>
    <string name="action_set_limit">Set traffic limit</string>
    <string name="sim2_limit">Set SIM2 limit</string>
    <string name="sim1_limit">Set SIM1 limit</string>
    <string name="set_limit_for_sim">Limit for each SIM</string>
    <string name="tip">After a long pause in counting it is recommended to set amount of transmitted and received traffic manually before starting service. See Settings - Data Usage to get latest statistics.</string>
    <string name="fill_all_fields">Fill all fields correctly!</string>
    <string name="over_limit">You have reached limit</string>
    <string name="service_disabled">Service disabled by user.</string>
    <string name="service_stopped">Service stopped due to reaching limit</string>
    <string name="service_stopped_title">Service stopped</string>
    <string name="count_stopped_tip">Counting has been stopped due to reaching limit on one of SIM. You can manually choose other SIM for mobile data. In other way, mobile data will be enabled at the beginning of next period (day/month) according to settings you\'ve chosen. If you increase the limit the service will automatically started.</string>
    <string name="notification_title">Traffic stats</string>
    <string name="use_notification_title">Notification</string>
    <string name="use_notification_summary">Notification when reaching limit</string>
    <string name="set_ringtone">Sound</string>
    <string name="set_ringtone_summary">Set your notification sound</string>
    <string name="use_vibration">Vibration</string>
    <string name="use_vibration_summary">Set if you need vibration</string>
    <string name="limit_summary">Set traffic limit for each SIM</string>
    <string name="limit_title">Traffic limit settings</string>
    <string name="measure_value">Measure value</string>
    <string name="period_value">Period of measurement</string>
    <string name="limit">Value</string>
    <string name="not_set">Not set</string>
    <string name="from_boot">Since\nreboot</string>
    <string name="round">Reduce the limit by (%)</string>
    <string name="not_supported">Your device is not supported</string>
    <string name="error">Error!</string>
    <string name="name_summary">Edit operator\'s settings</string>
    <string name="name_title">Operator\'s settings</string>
    <string name="auto_name_text">Name by network</string>
    <string name="name_text">Name by User</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="auto_off_text">Turn off mobile data when reaching limit</string>
    <string name="data_dis_tip">Warning: Turn off mobile data!</string>
    <string name="not_available">Not avail.</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="widget_summary">Widget options</string>
    <string name="widget_title">Widget</string>
    <string name="text_color">Operator name text color</string>
    <string name="background_color">Background color</string>
    <string name="text_size">Font size</string>
    <string name="show_names">Show operator names</string>
    <string name="no_root_granted">Please, grant root permissions!</string>
    <string name="attention">Attention!</string>
    <string name="need_root">This application needs root to change state of mobile data.</string>
    <string name="auto_change_text">Change SIM automatically when reaching limit</string>
    <string name="choose_action">Choose action</string>
    <string name="action_change">Change SIM for mobile data</string>
    <string name="prefer_text">Is preferable</string>
    <string name="action_change_limits">Go to settings and change limits</string>
    <string name="w_text_color" translatable="false">#ffffffff</string>
    <string name="w_back_color" translatable="false">#00ffffff</string>
    <string name="action_continue">Cancel - continue without changes</string>
    <string name="time_of_end">Time of reset</string>
    <string name="set">Set</string>
    <string name="day">Day of reset</string>
    <string name="check">Enter valid day of month</string>
    <string name="info_widget_traffic">Traffic - DSTC Widget</string>
    <string name="info_widget_image">Widget with carrier labels</string>
    <string name="show_icons">Show operator logo</string>
    <string name="operator_logo_1">Logo for SIM1</string>
    <string name="operator_logo_2">Logo for SIM2</string>
    <string name="show_full_text">Traffic data on main screen</string>
    <string name="only_total">Only total</string>
    <string name="all">All</string>
    <string name="title_activity_widget_config" translatable="false">WidgetConfigActivity</string>
    <string name="icon_size">Icons size</string>
    <string name="operator_logo_3">Logo for SIM3</string>
    <string name="sim3_limit">Set SIM3 limit</string>
    <string name="sim3_act">SIM3 is active: %1$s/s || %2$s/s</string>
    <string name="speed">%1$s/s</string>
    <string name="show_speed">Show connection speed</string>
    <string name="other_title">Other settings</string>
    <string name="use_watchdog">Enable watchdog service</string>
    <string name="restart">You should restart app to apply changes</string>
    <string name="other_summary">Enable watchdog service and etc.</string>
    <string name="watchdog_timer">Watchdog polling interval (not less then 1m)</string>
    <string name="minute">" m"</string>
    <string name="use_background">Use color background</string>
    <string name="everyday_on_off">Turn on/off mobile data schedule</string>
    <string name="time_off">OFF time</string>
    <string name="time_on">ON time</string>
    <string name="userpick">User</string>
    <string name="round_traffic">Round off traffic in session</string>
    <string name="crash_toast_text">Send error log to developer?</string>
    <string name="crash_toast_text_ok">Sending error log to developer…</string>
    <string name="pref_disable_acra">Send error logs to developer</string>
    <string name="show_icon_in_statusbar">Show service icon in status-bar  (if service gets closed by system, try enabling this)</string>
    <string name="use_divider">Show divider line</string>
    <string name="detect_sim">Autodetect SIM quantity</string>
    <string name="user_sim">Enter SIM quantity</string>
    <string name="set_sim_number">If SIM quantity is not detected correctly try to set it manually in Settings</string>
    <string name="day_in_period">Days in period</string>
    <string name="only_active">Show only active SIM</string>
    <string name="image_load">Image loaded!</string>
    <string name="image_not_load">Image not loaded!</string>
    <string name="use_night_limit">Use night limit</string>
    <string name="night">%1$s (night)</string>
    <string name="show_daynight_icons">Show day/night icons if night tariff is used</string>
    <string name="action_show_history">Show traffic for date</string>
    <string name="set_date">Click to choose date</string>
    <string name="date_incorrect_or_data_missing">Data you\'ve entered is incorrect or related info is missing</string>
    <string name="traffic_data">Traffic data for %1$s</string>
    <string name="choose_date">Another date</string>
    <string name="operator_round">Rounding off traffic</string>
    <string name="night_tafiff">Night limit</string>
    <string name="everyday_onoff">Everyday ON/OFF</string>
    <string name="days">d.</string>
    <string name="view_result">View result</string>
    <string name="show_logo_in_statusbar">Show operator logo instead of app icon in status-bar and notification area</string>
    <string name="show_logo">Logo in status-bar/notification</string>
    <string name="name_sim3">Name for SIM3</string>
    <string name="name_sim2">Name for SIM2</string>
    <string name="name_sim1">Name for SIM1</string>
    <string name="go_to_settings">Go to Settings-Data Usage</string>
    <string name="ask_for_logo">Add your logo</string>
    <string name="ask_for_logo_sum">E-mail to developer and ask for adding your logo</string>
    <string name="show_info_status">Traffic data in notification area</string>
    <string name="on_off_not_supported">The app isn\'t fully operational on your device</string>
    <string name="show_remaining">Traffic info in notification area</string>
    <string name="remain">Remaining</string>
    <string name="used">Used</string>
    <string name="show_full_text_on_widget">Traffic data</string>
    <string name="data_reset">%1$s: traffic data has been reset</string>
    <string name="test_hint">Please, enable mobile data on all of your SIM one by one starting with SIM #1. When enable for SIM #1, please, choose SIM1 radiobutton and press Test. And so on. At the end click OK. The app will define some internal parameters. Thank you!</string>
    <string name="action_show_test">Test SIM on MTK before Lollipop</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="traffic">Mobile Data</string>
    <string name="others">Other</string>
    <string name="calculate">Calculate</string>
    <string name="test">Test</string>
    <string name="app_version">Version %1$s</string>
    <string name="seconds">00 m %1$02d s</string>
    <string name="minutes_seconds">%1$02d m %2$02d s</string>
    <string name="outgoing_duration">Duration of outgoing calls</string>
    <string name="tip_calls">Shown duration of calls is not exact but rounded in accordance with interval of tariffication</string>
    <string name="calls">Outgoing Calls</string>
    <string name="calls_fragment">Calls stats</string>
    <string name="time_before_limit">Time in seconds before reaching limit</string>
    <string name="tariffication">Tariffication interval</string>
    <string name="calls_limit_summary">Outgoing calls limits settings</string>
    <string name="calls_limit_title">Calls limits</string>
    <string name="minutes">%1$02d m</string>
    <string name="traffic_rest">%1$s (left): %2$s</string>
    <string name="is_out_of_home_network">Are you calling outside of your home network?</string>
    <string name="no">No</string>
    <string name="send_email">Send email to developer</string>
    <string name="body">Here is some debug information</string>
    <string name="choose_client">Choose your email client</string>
    <string name="why_email">If app on your device isn\'t working correctly, you can send me email with some useful information about your device. For example, ROM version and CPU name</string>
    <string name="use_call_logger">Enable outgoing calls logger service</string>
    <string name="limit_settings">Limits</string>
</resources>