<?xml version="1.0" encoding="utf-8"?>
<preference-headers
    xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:id="@+id/notif_settings"
        android:fragment="ua.od.acros.dualsimtrafficcounter.settings.SoundFragment"
        android:summary="@string/use_notification_summary"
        android:title="@string/use_notification_title">
    </header>

    <header
        android:id="@+id/limit_settings"
        android:fragment="ua.od.acros.dualsimtrafficcounter.settings.LimitFragment"
        android:summary="@string/limit_summary"
        android:title="@string/limit_title">
    </header>

    <header
        android:id="@+id/name_settings"
        android:fragment="ua.od.acros.dualsimtrafficcounter.settings.NameFragment"
        android:summary="@string/name_summary"
        android:title="@string/name_title">
    </header>

    <header
        android:id="@+id/other_settings"
        android:fragment="ua.od.acros.dualsimtrafficcounter.settings.OtherFragment"
        android:summary="@string/other_summary"
        android:title="@string/other_title">
    </header>

</preference-headers>