<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ua.od.acros.dualsimtrafficcounter.preferences.TwoLineCheckPreference
        android:key="watchdog"
        android:title="@string/use_watchdog"
        android:defaultValue="true"
        android:summaryOn="@string/on"
        android:summaryOff="@string/off"/>

    <ua.od.acros.dualsimtrafficcounter.preferences.TwoLinePreference
        android:key="watchdog_timer"
        android:inputType="number"
        android:defaultValue="1"
        android:title="@string/watchdog_timer"
        android:summary=""
        android:dependency="watchdog"/>

    <ua.od.acros.dualsimtrafficcounter.preferences.TwoLineCheckPreference
        android:key="fullinfo"
        android:title="@string/show_full_text"
        android:defaultValue="true"
        android:summaryOn="@string/all"
        android:summaryOff="@string/only_total"/>


</PreferenceScreen>