<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
        android:title="@string/sim1_limit"
        android:key="sim1" >

        <PreferenceCategory
            android:title="@string/limit_settings" >

            <EditTextPreference
                android:key="limit1"
                android:inputType="numberDecimal"
                android:title="@string/limit"
                android:summary="" />

            <EditTextPreference
                android:key="round1"
                android:inputType="numberDecimal"
                android:defaultValue="0"
                android:title="@string/time_before_limit"
                android:summary="" />

            <ua.od.acros.dualsimtrafficcounter.preferences.TimePreference
                android:key="time1"
                android:title="@string/time_of_end"/>

            <ListPreference
                android:defaultValue="0"
                android:entries="@array/period"
                android:entryValues="@array/period_values"
                android:key="period1"
                android:summary=""
                android:title="@string/period_value" />

            <EditTextPreference
                android:key="day1"
                android:inputType="number"
                android:defaultValue="1"
                android:title="@string/day"
                android:summary="" />

        </PreferenceCategory>

        <PreferenceCategory
            android:title="@string/operator_round" >

            <ua.od.acros.dualsimtrafficcounter.preferences.TwoLineCheckPreference
                android:key="op_round1"
                android:title="@string/tariffication"
                android:defaultValue="false"
                android:singleLine="false"
                android:summaryOn="@string/on"
                android:summaryOff="@string/off" />

            <ListPreference
                android:defaultValue="0"
                android:entries="@array/measure_calls"
                android:entryValues="@array/measure_calss_values"
                android:key="op_value1"
                android:dependency="op_round1"
                android:summary=""
                android:title="@string/measure_value" />

        </PreferenceCategory>


    </PreferenceScreen>

    <PreferenceScreen
        android:title="@string/sim2_limit"
        android:key="sim2" >

        <PreferenceCategory
            android:title="@string/limit_settings" >

            <EditTextPreference
                android:key="limit2"
                android:inputType="numberDecimal"
                android:title="@string/limit"
                android:summary="" />

            <EditTextPreference
                android:key="round2"
                android:inputType="numberDecimal"
                android:defaultValue="0"
                android:title="@string/time_before_limit"
                android:summary="" />

            <ua.od.acros.dualsimtrafficcounter.preferences.TimePreference
                android:key="time2"
                android:title="@string/time_of_end"/>

            <ListPreference
                android:defaultValue="0"
                android:entries="@array/period"
                android:entryValues="@array/period_values"
                android:key="period2"
                android:summary=""
                android:title="@string/period_value" />

            <EditTextPreference
                android:key="day2"
                android:inputType="number"
                android:defaultValue="1"
                android:title="@string/day"
                android:summary="" />

        </PreferenceCategory>

        <PreferenceCategory
            android:title="@string/operator_round" >

            <ua.od.acros.dualsimtrafficcounter.preferences.TwoLineCheckPreference
                android:key="op_round2"
                android:title="@string/tariffication"
                android:defaultValue="false"
                android:singleLine="false"
                android:summaryOn="@string/on"
                android:summaryOff="@string/off" />

            <ListPreference
                android:defaultValue="0"
                android:entries="@array/measure_calls"
                android:entryValues="@array/measure_calss_values"
                android:key="op_value2"
                android:dependency="op_round2"
                android:summary=""
                android:title="@string/measure_value" />

        </PreferenceCategory>

    </PreferenceScreen>

    <PreferenceScreen
        android:title="@string/sim3_limit"
        android:key="sim3" >

        <PreferenceCategory
            android:title="@string/limit_settings" >

            <EditTextPreference
                android:key="limit3"
                android:inputType="numberDecimal"
                android:title="@string/limit"
                android:summary="" />

            <EditTextPreference
                android:key="round3"
                android:inputType="numberDecimal"
                android:defaultValue="0"
                android:title="@string/round"
                android:summary="" />

            <ua.od.acros.dualsimtrafficcounter.preferences.TimePreference
                android:key="time3"
                android:title="@string/time_of_end"/>

            <ListPreference
                android:defaultValue="0"
                android:entries="@array/period"
                android:entryValues="@array/period_values"
                android:key="period3"
                android:summary=""
                android:title="@string/period_value" />

            <EditTextPreference
                android:key="day3"
                android:inputType="number"
                android:defaultValue="1"
                android:title="@string/day"
                android:summary="" />

        </PreferenceCategory>

        <PreferenceCategory
            android:title="@string/operator_round" >

            <ua.od.acros.dualsimtrafficcounter.preferences.TwoLineCheckPreference
                android:key="op_round3"
                android:title="@string/round_traffic"
                android:defaultValue="false"
                android:singleLine="false"
                android:summaryOn="@string/on"
                android:summaryOff="@string/off" />

            <ListPreference
                android:defaultValue="0"
                android:entries="@array/measure_calls"
                android:entryValues="@array/measure_calss_values"
                android:key="op_value3"
                android:dependency="op_round3"
                android:summary=""
                android:title="@string/measure_value" />

        </PreferenceCategory>

    </PreferenceScreen>

</PreferenceScreen>